# loli_profiler

./: BUILD_LINUX.md  CLAUDE.md  CMakeLists.txt  README.md  analyze_heap.py  build_linux.sh  markdown_to_html.py  pyproject.toml
docs/: ARCH.md  CLI_MODE.md  MCP_HEAP_EXPLORER.md
include/: cliprofiler.h  profilecomparator.h
loli_cli/: README.md  __init__.py  cli.py  core.py  loli_convert.py  tree_model.py
mcp_server/: heap_explorer_server.py
scripts/: Deployqt.bat  Deployqt.sh
src/: cliprofiler.cpp  main_cli.cpp  profilecomparator.cpp
